# PolarCode

./: CMakeLists.txt  PolarCode.cpp  PolarCode.h  README.md  Simulation.cpp  Testing.cpp  requirements.sh
include/: PolarCode.h  Simulation.h
src/: Graph.cpp  MainApp.cpp  Testing.cpp  time.cpp
src/PolarCode/: PolarCode.cpp
src/Simulation/: Simulation.cpp
tests/: Unit_Test.cpp
